--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -1,6 +1,14 @@
+
 html,body{
     margin:0px;   
 }
+
+
+.material-icons.md-light { color: rgba(255, 255, 255, 1); }
+.material-icons.md-14 {font-size: 14px;}
+
+
+
 .svgSmall{
     height: 20px;
     width: 20px;
@@ -35,21 +43,54 @@ html,body{
     display: grid;
     grid-column: 1/2;
     grid-row:1/ 3;
+    row-gap: 10px;
     grid-template-rows: 80px 130px 150px;
     justify-content: center;
     align-content: baseline;
-    border: 1px solid black;
-    background-color: rgb(83, 125, 179);
+ 
+    background-color: rgb(74, 144, 236);
+}
+
+.sidebarTextWithIcons{
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    align-content: center;
+    justify-content: center;
+}
+
+#sidebarBtnDiv1{
+    row-gap: 10px;
+
+}
+#sidebarBtnDiv2{
+    row-gap: 10px;
+    align-content: end;
+
+}
+
+.material-icons.sidebarIcons{
+    justify-self: baseline;
 }
 
 .sidebarBtn {
     border: none;
-    background-color: rgb(83, 125, 179);
+    background-color: rgb(74, 144, 236);
+    color: white;
+    align-self: center;
+}
+.sidebarDash{
+    align-self: center;
+    justify-self: center;
+}
+.sidebarDash > .sidebarTextWithIcons > .material-icons{
+    align-self: center;
+}
+.sidebarDash > .sidebarTextWithIcons > h4{
     color: white;
 }
-
 .sidebarBtn:hover{
     background-color: rgb(67, 104, 153);
+    border-radius: 10px;
 }
 
 .sidebarBtnDiv{
@@ -59,15 +100,16 @@ html,body{
     height: 150px;
 }
 
+
 .topInfo{
     display: grid;
     grid-template-columns: 1.5fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-column: 2/3;
-    height: 150px;
-    border: 1px solid black;
+    height: 150px;   
     justify-items: center;
     align-items: center;
+    box-shadow: 0px 5px 5px #5d8de775;
 }
 .searchContainer{
     display: flex;
