--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -1,11 +1,13 @@
 
 html,body{
     margin:0px;   
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-14 {font-size: 14px;}
+.material-icons.md-24 {font-size: 24px;}
 
 
 
@@ -44,7 +46,7 @@ html,body{
     grid-column: 1/2;
     grid-row:1/ 3;
     row-gap: 10px;
-    grid-template-rows: 80px 130px 150px;
+    grid-template-rows: 80px 150px 150px;
     justify-content: center;
     align-content: baseline;
  
@@ -66,6 +68,7 @@ html,body{
     row-gap: 10px;
     align-content: end;
 
+
 }
 
 .material-icons.sidebarIcons{
@@ -85,9 +88,10 @@ html,body{
 .sidebarDash > .sidebarTextWithIcons > .material-icons{
     align-self: center;
 }
-.sidebarDash > .sidebarTextWithIcons > h4{
+.sidebarDash > .sidebarTextWithIcons > h2{
     color: white;
 }
+
 .sidebarBtn:hover{
     background-color: rgb(67, 104, 153);
     border-radius: 10px;
@@ -103,6 +107,7 @@ html,body{
 
 .topInfo{
     display: grid;
+    
     grid-template-columns: 1.5fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-column: 2/3;
@@ -160,6 +165,7 @@ html,body{
 }
 .personInfoBtn:hover{
     background-color: rgb(37, 37, 248);
+    box-shadow: 7px 5px 6px #5590fd75;
 }
 
 
